MCDawn 1.0.1.6
-Updated Commands
	-/players - Will show users in IRC channels if IRC is enabled.
	-/irc - Will correctly show users in IRC channels.
	-/hsave - Works as intended.
-New Commands
	-/dome <radius> <block> [type] - Creates a sphere around the player using it.
-MCDawn Server List re-coded to fix several bugs.
	
MCDawn 1.0.1.5
-Added !url IRC command (Type !url in the channel of the IRC bot and the server will say the URL of the server).
-ProfanityFilter fixed to work properly, and not throw OutOfMemoryExceptions.
-Anti-Caps and Anti-Spam features fixed to work properly now.
-Fixed small Admin Security System bug.
-If GeoIP is enabled, players connecting from local IP addresses (same network/machine) now have their countries shown as "Localhost (CountryName)" instead of "N/A".
-Updated Commands
	-/save - If correct amount of arguments given, it won't error when executed from Console now.
	-/throttle - If set to 0, throttling will be turned off (building commands will go at full speed).
	-/unload empty - Works as intended now.
	-/zoneall - Fixed to work properly on non perfect cube levels.
	-/reveal all - Instead of reloading the map for each player at once, it will do all at the same time.
-Added Omni-Banning and Global-Banning for servers / consoles.
-Map Editor/Viewer tab complete, added fCraft IsoCat Map Viewer.
-On login, if player is not using minecraft.net's game client and they are using a migrated account, instead of kicking for "illegal name" it will tell them to use minecraft.net's client instead.
-Heartbeat URL changed back to HTTP instead of HTTPS.
-Plugin Manager bug fixed where it always said version was incompatible.

MCDawn 1.0.1.4
-Building commands "throttle" redone, now goes on a scale of 1 to 200 (Determines how many blocks to set in 100 ms).
-Updated Commands
	-/spleef players - Shows status of all players in spleef.
	-/ignore - Cannot ignore ops if Server.allowIgnoreOps is false.